<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="50dp">


    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

        <RadioButton
            android:id="@+id/radio_button_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_1_a"
            android:textSize="20sp"
            android:theme="@style/AppTheme"/>
        <RadioButton
            android:id="@+id/radio_button_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_1_b"
            android:textSize="20sp"
            android:theme="@style/AppTheme"/>
        <RadioButton
            android:id="@+id/radio_button_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_1_c"
            android:textSize="20sp"
            android:theme="@style/AppTheme"/>

        <RadioButton
            android:id="@+id/radio_button_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_1_d"
            android:textSize="20sp"
            android:theme="@style/AppTheme"/>

    </RadioGroup>
</RelativeLayout>